Create 2 new screens.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   <link rel="stylesheet" href="css/Homepage/main.css" />
   <link rel="stylesheet" href="css/Homepage/slider.css" />
   <link rel="stylesheet" href="css/Homepage/colorBalls.css" />
@@ -102,20 +104,17 @@
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf40a10a06ca_Vector%2014%20copy.svg"
                       alt="" class="c-nav__arrow-svg"></h5>
                 </a>
-
-                <!-- <section id="solurion-attract">
-                  <h1>jhgkdfjgkjgjk</h1>
-                </section> -->
               </div>
-              <div class="c-nav-middle__flex-holder cc-red"><a href="/solutions/assess"
-                  class="c-nav__flex-item cc-nav-title cc-2 cc-green w-inline-block"
+              <div class="c-nav-middle__flex-holder cc-red">
+                <a href="assess-talent.html" class="c-nav__flex-item cc-nav-title cc-2 cc-green w-inline-block"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;"
                   tabindex="0">
                   <h5 class="heading-6">Assess talent<img loading="lazy"
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf38130a069d_Vector%2013%20copy.svg"
                       alt="" class="c-nav__arrow-svg"></h5>
-                </a></div>
-              <div class="c-nav-middle__flex-holder cc-red"><a href="/solutions/simplify"
+                </a>
+              </div>
+              <div class="c-nav-middle__flex-holder cc-red"><a href="simplify.html"
                   class="c-nav__flex-item cc-nav-title cc-2 cc-blue w-inline-block"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;"
                   tabindex="0">
@@ -678,7 +677,8 @@
               src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbfeb130a06c1_Ellipse%2014.svg"
               class="c-assess__svg">
           </div>
-          <div class="c-bubble__wrapper _205 image-lightRed"><img
+          <div class="c-bubble__wrapper _205 image-lightRed">
+            <img
               src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbff6a90a0693_Ellipse%2020.svg"
               class="c-assess__svg">
           </div>
