Create 2 new screens in our solution part.

--- a/solution-attract.html
+++ b/solution-attract.html
@@ -172,8 +172,9 @@
               </div>
             </div>
             <div class="c-nav-drop__middle-item">
-              <div class="c-nav-middle__flex-holder cc-red top"><a data-w-id="385e0229-2d32-e287-da36-8920b0231164"
-                  href="#" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
+              <div class="c-nav-middle__flex-holder cc-red top">
+                <a data-w-id="385e0229-2d32-e287-da36-8920b0231164" href="save-time.html"
+                  class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
                   style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                   tabindex="0">
                   <h5 class="heading-6">Save time
@@ -181,23 +182,28 @@
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf38130a069d_Vector%2013%20copy.svg"
                       alt="" class="c-nav__arrow-svg">
                   </h5>
-                </a></div>
-              <div class="c-nav-middle__flex-holder cc-red"><a data-w-id="385e0229-2d32-e287-da36-8920b0231168"
-                  href="/why/compliance" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
+                </a>
+              </div>
+              <div class="c-nav-middle__flex-holder cc-red">
+                <a data-w-id="385e0229-2d32-e287-da36-8920b0231168" href="remain.html"
+                  class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;"
                   tabindex="0">
                   <h5 class="heading-6">Remain compliant<img loading="lazy"
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf38130a069d_Vector%2013%20copy.svg"
                       alt="" class="c-nav__arrow-svg"></h5>
-                </a></div>
-              <div class="c-nav-middle__flex-holder cc-red"><a data-w-id="385e0229-2d32-e287-da36-8920b023116c"
-                  href="/why/diversity" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
+                </a>
+              </div>
+              <div class="c-nav-middle__flex-holder cc-red">
+                <a data-w-id="385e0229-2d32-e287-da36-8920b023116c" href="improve.html"
+                  class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
                   style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;"
                   tabindex="0">
                   <h5 class="heading-6">Improve diversity<img loading="lazy"
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf99d90a06c9_Vector%2014%20(1).svg"
                       alt="" class="c-nav__arrow-svg"></h5>
-                </a></div>
+                </a>
+              </div>
               <div class="c-nav-middle__flex-holder cc-red btm"><a data-w-id="385e0229-2d32-e287-da36-8920b0231170"
                   href="/why/engagement" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
                   style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
