have to deploy.

--- a/index.html
+++ b/index.html
@@ -746,23 +746,26 @@
             <div class="title-row1__holder">
               <h1 class="no-mg p-r__10 header-title">
                 <div class="lineswrap">
-                  <div class="line hiring" style="display: block; text-align: start; width: 100%;">
+                  <div class="line hiring animate-text" style=" display: block; text-align: start; width: 100%;">
                     Hiring's
                   </div>
                 </div>
               </h1>
               <h1 class="no-mg header-title bold">
                 <div class="lineswrap">
-                  <div class="line hard" style="display: block; text-align: start; width: 100%;">hard.</div>
+                  <div class="line hard animate-text" style="display: block; text-align: start; width: 100%;">hard.
+                  </div>
                 </div>
               </h1>
             </div>
             <h1 class="heading-9">
               <div class="lineswrap">
-                <div class="line made-it" style="display: block; text-align: start; width: 100%;">We've made it</div>
+                <div class="line made-it animate-text" style="display: block; text-align: start; width: 100%;">We've
+                  made it</div>
               </div>
               <div class="lineswrap">
-                <div class="line easy" style="display: block; text-align: start; width: 100%; transition-delay: 200ms;">
+                <div class="line easy animate-text"
+                  style="display: block; text-align: start; width: 100%; transition-delay: 200ms;">
                   easy.
                 </div>
               </div>
@@ -801,7 +804,8 @@
             <div>
               <h3>
                 <div class="lineswrap">
-                  <div class="line header-next" style="display: block; text-align: center; width: 100%;">What are your
+                  <div class="line header-next animate-text" style="display: block; text-align: center; width: 100%;">
+                    What are your
                     biggest
                     hiring challenges?</div>
                 </div>
@@ -809,7 +813,8 @@
             </div>
             <p>
             <div class="lineswrap">
-              <div class="line" style="display: block; text-align: center; width: 100%;">Select a few to see your Stryve
+              <div class="line animate-text" style="display: block; text-align: center; width: 100%;">Select a few to
+                see your Stryve
                 solution</div>
             </div>
             </p>
