--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="css-edits w-embed"></div>
   <div class="c-navbar w-nav">
     <div class="c-ctn cc-nav">
-      <a href="/stryve/index.html" class="brand w-nav-brand w--current">
+      <a href="/index.html" class="brand w-nav-brand w--current">
         <div class="html-embed-3 w-embed"><svg id="logo-svg" width="102" height="31" viewBox="0 0 102 31" fill="none"
             xmlns="http://www.w3.org/2000/svg" class=" drawsvg-initialized">
 
@@ -206,7 +206,7 @@
                 </a>
               </div>
               <div class="c-nav-middle__flex-holder cc-red btm"><a data-w-id="385e0229-2d32-e287-da36-8920b0231170"
-                  href="/why/engagement" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
+                  href="engagement.html" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block"
                   style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                   tabindex="0">
                   <h5 class="heading-6">Build engagement<img loading="lazy"
@@ -264,7 +264,7 @@
             <div class="c-nav-drop__middle-item">
               <div data-w-id="0d5dc2f6-242e-e269-a9ff-ed73ecc8e1c0" class="c-nav-middle__flex-holder top"
                 style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                <a href="/about" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block" tabindex="0">
+                <a href="about-us.html" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block" tabindex="0">
                   <h5 class="heading-6">About us<img loading="lazy"
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf10e20a06cb_Vector%2014.svg"
                       alt="" class="c-nav__arrow-svg"></h5>
