Complete the about us part but remain the form type.

--- a/assess-talent.html
+++ b/assess-talent.html
@@ -265,7 +265,7 @@
               </div>
               <div data-w-id="52e2bc8b-3d2c-721a-d9c4-bc5238ca2d39" class="c-nav-middle__flex-holder"
                 style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                <a href="/b-corporation" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block" tabindex="0">
+                <a href="B-Corp.html" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block" tabindex="0">
                   <h5 class="heading-6">B Corp<img loading="lazy"
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf38130a069d_Vector%2013%20copy.svg"
                       alt="" class="c-nav__arrow-svg"></h5>
@@ -273,7 +273,7 @@
               </div>
               <div data-w-id="762dde16-ccfa-e577-c8c5-ef8a3b50a2eb" class="c-nav-middle__flex-holder"
                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1;">
-                <a href="/careers" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block" tabindex="0">
+                <a href="career.html" class="c-nav__flex-item cc-nav-title cc-2 w-inline-block" tabindex="0">
                   <h5 class="heading-6">Careers<img loading="lazy"
                       src="https://uploads-ssl.webflow.com/6135d217a84bbf3ca90a0652/6135d217a84bbf99d90a06c9_Vector%2014%20(1).svg"
                       alt="" class="c-nav__arrow-svg"></h5>
